container class added

--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
     <link rel="shortcut icon" href="/images/favicon.ico" />
     <title>Landing Page</title>
     <meta name="description" content="Landing page's description" />
-</head>
-<body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia.</h1>
+    <link rel="stylesheet" href="inc/style.css"/>
     
+</head>a
+<body>
+  <header>
+    <div class="container">
+        <div class="flex">
+            <div class="flex-md-4"><div class="logo">Logo</div></div>
+            <div class="flex-md-4">   <div class="midle-text">Lorem ipsum dolor sit amet consectetur.</div></div>
+            <div class="flex-md-4"><div class="btn"><a href="#">CTA</a></div></div>
+        </div>
+    </div>
+  </header> 
 </body>
 </html>
