--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <link rel="shortcut icon" href="/images/favicon.ico" />
     <title>Landing Page</title>
     <meta name="description" content="Landing page's description" />
-    <link rel="stylesheet" href="inc/style.css"/>
+    <link rel="stylesheet" href="inc/css/framework.css"/>
+    <link rel="stylesheet" href="inc/css/common.css"/>
+    <link rel="stylesheet" href="inc/css/index.css"/>
     
-</head>a
+</head>
 <body>
   <header>
     <div class="container">
         <div class="flex">
-            <div class="flex-md-4"><div class="logo">Logo</div></div>
+            <div class="flex-md-4"><div class="logo"><span class="logo-img">Logo</span></div></div>
             <div class="flex-md-4">   <div class="midle-text">Lorem ipsum dolor sit amet consectetur.</div></div>
             <div class="flex-md-4"><div class="btn"><a href="#">CTA</a></div></div>
         </div>
